--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,7 +3,7 @@ title: "CS371p Fall 2015: Juan Villegas"
 email: j_villegas5@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
 
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/blog/" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 github_username:  jjv722
 
