--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -4,7 +4,7 @@ email: j_villegas5@yahoo.com
 description: > # this means to ignore newlines until "baseurl:"
 
 baseurl: "/blog/" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "jjv722.github.io/blog" # the base hostname & protocol for your site
 github_username:  jjv722
 
 # Build settings
