--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,14 @@
 # Site settings
-title: "CS371p Fall 2015: Juan Villegas"
-email: j_villegas5@yahoo.com
+title: Your awesome title
+email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-
-baseurl: "/blog/" # the subpath of your site, e.g. /blog/
-url: "jjv722.github.io/blog" # the base hostname & protocol for your site
-github_username:  jjv722
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://yourdomain.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
 
 # Build settings
 markdown: kramdown
